syntax = "proto3";
option java_multiple_files = false;
option java_package = "com.jimas.grpc.demo.helloworld";
option java_outer_classname = "DemoProto";
option objc_class_prefix = "TS";
package demo;
service DemoService {

  rpc demoFunction(DemoInput) returns(DemoOutput){}

}

message DemoInput {
  string Key = 1;
}
message DemoOutput {
  string Key = 1;
}